--- a/webapp/webapp/src/app/products/products.component.html
+++ b/webapp/webapp/src/app/products/products.component.html
@@ -6,7 +6,7 @@
     <div>{{product.image}}</div>
     <div>{{product.price}}</div>
     </a>
-    <button class="delete" title="delete hero"
+    <button class="delete" title="delete product"
             (click)="remove(product)">x</button>
   </li>
 </ul>
