--- a/webapp/app/src/app/components/product-details/product-details.component.css
+++ b/webapp/app/src/app/components/product-details/product-details.component.css
@@ -1,21 +1,19 @@
-h1 {
-  margin-bottom: 0;
-  padding: 10px;
-  letter-spacing: 5px;
-  text-align: center;
+h3 {
+  margin-left: 70px;
 }
 img {
-  width: 300px;
-  height: 170px;
-  margin-left: 20px;
+  width: 400px;
+  height: 210px;
+  margin-left: 70px;
   margin-right: 15px;
   float:left;
 }
-p {
-  font-size: 14px;
-  text-align: justify;
+span {
+  height: 10px;
 }
 .details {
-  text-align: center;
-  border-left: 10px;
+  height: auto;
+  padding: 0px 200px;
+  line-height: 20px;
+  word-wrap: break-word;
 }
