--- a/webapp/app/src/app/components/product-details/product-details.component.html
+++ b/webapp/app/src/app/components/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <div class="details">
 <h3>{{product.name}}</h3>
 <img src="{{product.image}}"/>
-
-<p>{{product.description}}</p>
+<h4>Description</h4>
+<span>{{product.description}}</span>
 </div>
